--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,17 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
+
+  # Aggregate job for branch protection
+  all-tests:
+    name: test
+    runs-on: ubuntu-latest
+    needs: [test, lint]
+    if: always()
+    steps:
+      - name: Check test matrix status
+        if: needs.test.result != 'success'
+        run: exit 1
+      - name: Check lint status
+        if: needs.lint.result != 'success'
+        run: exit 1
